[tool.poetry]
name = "CarreraTrackDesign"
version = "0.1.0"
description = "A Python package that generates Carrera 1:32/1:24 slot car tracks based on user specified track sections."
authors = ["Jonas Petersen"]
readme = ["README.md"]
repository = "https://github.com/KaptajnFjaesing/CarreraTrackDesign"
packages = [{ include = "carreratrackdesign", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11.8,<3.13"
numpy = "^1.26.4"
spyder-kernels = "2.5"
tqdm = "^4.67.1"
shapely = "^2.0.7"
matplotlib = "^3.10.0"


[build-system]
requires = ["setuptools", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

